Small addition to page content

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>Hello Coursela!</title>
   </head>
   <body>
-    <<h1>Hello Cousela!</h1>
+    <<h1>Hello Cousela! It's time!!</h1>
   </body>
 </html>
